<resources>
	<string name="app_name">Poweramp v3 Vis Preset Example</string>

	<string name="installation_ok">Successfully installed</string>

	<string name="start_with_presets">Start Poweramp\nand scan this APK for Presets</string>
	<string name="open_vis_settings">Open Vis Settings</string>
	<string name="send_preset">Send Preset Text To Poweramp</string>
	<string name="rescan_presets">Rescan Presets</string>
</resources>
