<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:id="@android:id/custom"
	android:fitsSystemWindows="true"
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:orientation="horizontal"
		tools:ignore="UseCompoundDrawables"
		>
		<ImageView
			android:id="@+id/icon"
			android:src="@mipmap/app_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="2dp"
			tools:ignore="ContentDescription"
			/>
		<TextView
			android:id="@+id/title"
			android:layout_marginLeft="16dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/installation_ok"
			android:textSize="16sp"
			android:layout_gravity="center_vertical"
			tools:ignore="RtlHardcoded"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:layout_weight="1"
	>
		<EditText
			android:id="@+id/edit"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="top"
			android:padding="8dp"
			android:fontFamily="monospace"
			android:textSize="13sp"
			android:scrollbars="vertical"
			android:scrollbarAlwaysDrawVerticalTrack="true"
			android:inputType="textMultiLine"
			tools:ignore="Autofill,LabelFor,NestedWeights"
			/>
		<Button
			android:onClick="sendPreset"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/send_preset"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			tools:ignore="UsingOnClickInXml"
			/>

		<!-- Debug buttons -->
		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:attr/colorAccent"
		>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingLeft="8dp"
				android:paddingRight="8dp"
			>
				<Button
					android:onClick="listMilkPresets"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="listMilkPresets"
					android:textSize="10sp"
					android:textAllCaps="false"
					tools:ignore="ButtonStyle,HardcodedText,SmallSp,UsingOnClickInXml"
					/>
				<Button
					android:onClick="pushFile"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="pushFile"
					android:layout_marginLeft="4dp"
					android:textSize="10sp"
					android:textAllCaps="false"
					tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded,SmallSp,UsingOnClickInXml"
					/>
				<Button
					android:onClick="deleteFile"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="deleteFile"
					android:layout_marginLeft="4dp"
					android:textSize="10sp"
					android:textAllCaps="false"
					tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded,SmallSp,UsingOnClickInXml"
					/>
			</LinearLayout>
		</HorizontalScrollView>


		<Button
			android:onClick="startWithVisPresets"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:text="@string/start_with_presets"
			android:textSize="16sp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			tools:ignore="UsingOnClickInXml"
			/>

		<Button
			android:onClick="rescanVisPresets"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/rescan_presets"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			tools:ignore="UsingOnClickInXml"
			/>

		<Button
			android:onClick="openPowerampVisSettings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/open_vis_settings"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			tools:ignore="UsingOnClickInXml"
			/>
	</LinearLayout>
</LinearLayout>
